--- a/style.css
+++ b/style.css
@@ -2,28 +2,38 @@
     color:snow;
     text-decoration:none;
   }
+
   #center1{
     font-size:20px;
   }
+
   .topnav{
     background-color:red;
 border:9px solid red;
 height:50px;
 margin-right:0px;
   }
+
   .topnav2{
     background-color:lightgrey;
     margin-right:0px;
   }
+
 #or
 {
   text-align:center;
 }
+
   #marq1
   {
     font-size:22px;
   }
- 
+
+.div3
+{
+  font-size:26px;
+}
+
 .h1-1
 {
   color:brown;
