--- a/Style.css
+++ b/Style.css
@@ -25,15 +25,14 @@ margin-right:0px;
 }
 
 
-  #marq1
+#marq1
   {
     font-size:22px;
   }
 
 .div3
 {
-   
-    font-size-adjust:26px;
+    font-size:26px;
 }
 
 .h1-1
