--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
     text-decoration:none;
   }
 
-  #center1{
+ #center1{
     font-size:20px;
   }
 
@@ -32,7 +32,7 @@ margin-right:0px;
 
 .div3
 {
-    font-size:26px;
+    font-size-adjust:26px;
 }
 
 .h1-1
