--- a/Style.css
+++ b/Style.css
@@ -104,6 +104,8 @@ a
     text-align:justify;
     margin-left: 20px;
     margin-right: 20px;
+    font-size:50px;
+    text-size:50px;
 }
 .black-link
 {
